<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MTKLogger</string>
    <string name="notification_title_network">Network log</string>
    <string name="notification_title_mobile">Mobile log</string>
    <string name="notification_title_modem">Modem log</string>
    <string name="notification_title_met">MET log</string>
    <string name="notification_title_gps">GPS log</string>
    <string name="notification_title">MTKLogger is running</string>
    <string name="notification_on_summary_suffix">is on.</string>
    <string name="notification_on_summary_suffixes"> are on.</string>
    <string name="notification_off_summary_suffix">is off.</string>
    <string name="notification_off_summary_suffixes"> are off.</string>
    <string name="notification_nearly_out_of_storage">Log storage is running out.</string>
    <string name="notification_out_of_storage_summary">Click to get more information.</string>
    <string name="network_log_name">NetworkLog</string>
    <string name="mobile_log_name">MobileLog</string>
    <string name="modem_log_name">ModemLog</string>
    <string name="modem_log_name1">ModemLog1</string>
    <string name="modem_log_name2">ModemLog2</string>
    <string name="modem_log_name3">ModemLog3</string>
    <string name="modem_log_name4">ModemLog4</string>
    <string name="modem_log_name5">ModemLog5</string>
    <string name="modem_log_name6">ModemLog6</string>
    <string name="modem_log_name7">ModemLog7</string>
    <string name="modem_log_name8">ModemLog8</string>
    <string name="met_log_name">METLog</string>
    <string name="gps_log_name">GPSLog</string>
    <string name="dual_modem_log_name">DualModemLog</string>
    <string name="ext_modem_log_name">ExtModemLog</string>
    <string name="tag_log_name">TagLog</string>
    <string name="menu_settings">Settings</string>
    <string name="mobilelog_unselected">There is no type of mobilelog seleted, it will not be started!</string>
    <string name="no_log_on">There is no log on!</string>
    <string name="log_path_str">Log path</string>
    <string name="log_used_storage">Used</string>
    <string name="log_free_storage">Free</string>
    <string name="log_start"><xliff:g id="type">%s</xliff:g> recording</string>
    <string name="log_stop"><xliff:g id="type">%s</xliff:g> stopped</string>
    <string name="log_unselected"><xliff:g id="type">%s</xliff:g> disabled</string>
    <string name="time_default">0:00:00</string>
    <string name="log_path_type_label_unknown">Unknown</string>
    <string name="log_path_type_label_sd">SD Card</string>
    <string name="log_path_type_label_emmc" product="default">Phone storage</string>
    <string name="log_path_type_label_modemlog_2_sd" product="default">Only Modem Log to SD Card</string>
    <string name="log_path_type_label_data">Internal storage</string>
    <string name="log_path_not_exist">The storage path <xliff:g id="logpath">%s</xliff:g> is not exist!</string>
    <string name="low_storage_warning_dialog_title">Low Storage Warning</string>
    <string name="low_storage_warning_dialog_msg">The free space is lower than 
        <xliff:g id="logpath">%d</xliff:g>M, please clear storage otherwise logs will stop automaticly soon!</string>
    <string name="info_mokey_test_running">Mokey test is running, can not start/stop logs!</string>
    <string name="info_not_device_owner">It is not device owner, can not start/stop logs!</string>
    <string name="start_log_confirm_dlg_title">Start Log Warning</string>
    <string name="message_start_log_confirm">The logs will be saved to public storage area, so it may cause private data leakage. Are you sure you want to start the log recording anyway?</string>
    <string name="stop_log_confirm_dlg_title">Stop Log Warning</string>
    <string name="message_stop_log_confirm">The logs have been saved to public storage area. Please delete as soon as possible to prevent private data leakage!</string>
    <string name="waiting_dialog_title_start_log">Starting logs</string>
    <string name="waiting_dialog_message_start_log">Waiting for starting logs...</string>
    <string name="waiting_dialog_title_stop_log">Stopping logs</string>
    <string name="waiting_dialog_message_stop_log">Waiting for stopping logs...</string>
    <string name="waiting_dialog_title_restart_log">Restarting logs</string>
    <string name="waiting_dialog_message_restart_log">Waiting for restarting logs...</string>
    <string name="waiting_dialog_title_poll_log">Polling logs</string>
    <string name="waiting_dialog_message_poll_log">Waiting for polling logs...</string>
    <string name="waiting_dialog_title_flush_log">Flushing logs</string>
    <string name="waiting_dialog_message_flush_log">Waiting for flushing logs...</string>
    <string name="waiting_service_dialog_message">Waiting log initiation...</string>
    <string name="waiting_checking_log_dialog_message">Checking log files...</string>
    <string name="general_settings_title">General Settings</string>
    <string name="advanced_settings_title">Advanced settings</string>
    <string name="enable_tag_log_title">Enable Tag Log</string>
    <string name="enable_tag_log_summary">Enable or disable tag log function</string>
    <string name="enable_always_tag_modem_log_title">Always Tag Modem Log</string>
    <string name="enable_always_tag_modem_log_summary">Enable or disable Always Tag Modem Log function</string>
    <string name="enable_exception_reporter_title">Enable Exception Reporter</string>
    <string name="enable_exception_reporter_summary">Enable or disable Exception Reporter</string>
    <string name="enable_ui_debug_mode_title">Enable UI Debug Mode</string>
    <string name="enable_ui_debug_mode_summary">Enable or disable UI Debug Mode</string>
    <string name="log_storage_location_title">Log storage location</string>
    <string name="run_exception_history">Open Exception History</string>
    <string name="run_exception_history_summary">You could open Exception History to view exceprion report list.</string>
    <string name="warning_no_permission_for_setting">Only device owner can modify log configurations.</string>
    <string name="file_info_path">File Path:</string>
    <string name="file_info_modified_time">Modified Time:</string>
    <string name="file_info_size">File Size:</string>
    <string name="limit_single_log_size_title">Limit Current Log Size(MB)</string>
    <string name="limit_single_log_size_summary">Recycle current recording log when it reaches the limit log size</string>
    <string name="limit_single_log_size_dialog_message">The limit size of current recording 
        <xliff:g id="log_type">%s</xliff:g> should be between 
        <xliff:g id="min_size">%d</xliff:g>MB and 
        <xliff:g id="max_size">%d</xliff:g>MB(Size of 
        <xliff:g id="store_type">%s</xliff:g>).</string>
    <string name="limit_total_log_size_title">Limit Total Log Size(MB)</string>
    <string name="limit_total_log_size_summary">Total recorded log (include past ones) will not exceed this size</string>
    <string name="limit_total_log_size_dialog_message">The limit size of total recorded 
        <xliff:g id="log_type">%s</xliff:g> should be between  
        <xliff:g id="current_size">%s</xliff:g>MB ~
        <xliff:g id="max_size">%s</xliff:g>MB (multiple of 
        <xliff:g id="current_size">%s</xliff:g>). \n Warning: if the sum of all log\'s max log size greater than storage size, log may be stopped by Storage is full. 
        </string>
       <string name="enable_met_log_title">Enable MET Log</string>
    <string name="enable_met_log_summary">Enable or disable MET log function</string>
    <string name="metlog_settings">METLog Settings</string>
    <string name="limit_metlog_size_title">Limit Log Size(MB per cpu)</string>
    <string name="limit_metlog_size_summary">Recycle log when it reaches the limit log size</string>
   <string name="enable_bt_log_title">Open Bluetooth log Tool</string>
    <string name="enable_bt_log_summary">Enter Bluetooth setting UI</string>
   <string name="open_wifi_log_tool_title">Open Wi-Fi Log Tool</string>
    <string name="open_wifi_log_tool_summary">Enter Wi-Fi Log Setting UI</string>
    <string name="limit_log_size_title">Limit Log Size(MB)</string>
    <string name="limit_log_size_summary">Recycle log when it reaches the limit log size</string>
    <string name="start_automatically_title">Start Automatically</string>
    <string name="log_mode_title">Log Mode</string>
    <string name="log_mode_summary">Set modem log mode</string>
    <string name="ccb_gear_title">CCB Gear ID(Control+Raw Buffer)</string>
    <string name="ccb_gear_summary">Set CCB Gear ID</string>
    <string name="start_automatically_modem_summary">Start Modem Log automatically when restart or switch modem</string>
    <string name="reset_automatically_modem_title">Reset Modem Automatically</string>
    <string name="reset_automatically_modem_summary">Reset Modem automatically after EE happened</string>
    <string name="monitor_modme_abnormal_event_title">Monitor Modem Abnormal Event</string>
    <string name="monitor_modme_abnormal_event_summary">When modem abnormal event happened, will passive log to SD automatically</string>
    <string name="save_location_in_log_title">Save Location in Log(Md1 Only)</string>
    <string name="save_location_in_log_summary">Enable GPS device.When GPS signal is acquired,stores coordination of device in modem log</string>
    <string name="start_automatically_network_summary">Start Network Log automatically when next bootup</string>
    <string name="networklog_ping_title">Enable environment check</string>
    <string name="networklog_ping_summary">Check network running environment at stopping time. This may take a few seconds.</string>
    <string name="networklog_limit_package_enabler">Enable package limitation</string>
    <string name="networklog_limit_package_enabler_summary">Check to limit each network log package\'s size to the given value</string>
    <string name="networklog_limit_package_size">Limited package size</string>
    <string name="networklog_limit_package_size_summary">Each package size will not exceed this value</string>
	<string name="default_mode_value">2</string>
	<string name="default_ccb_gear_value">0</string>
    <string name="logs">ADDITIONAL LOGS</string>
    <string name="mobile_log">MobileLog</string>
    <string name="modem_log">ModemLog</string>
    <string name="net_log">NetLog</string>
    <string name="basic_info">BASIC INFO</string>
    <string name="pref_key_exception_db">exception_db</string>
    <string name="pref_key_process_name">process_name</string>
    <string name="pref_key_exception_class">exception_class</string>
    <string name="pref_key_exception_level">exception_level</string>
    <string name="pref_key_exception_type">exception_type</string>
    <string name="pref_key_build_version">build_version</string>
    <string name="pref_key_device_name">device_name</string>
    <string name="pref_key_date_time">date_time</string>
    <string name="chk_key_mobile_log">chk_mobile_log</string>
    <string name="chk_key_net_log">chk_net_log</string>
    <string name="chk_key_modem_log">chk_modem_log</string>
    <string name="status">status</string>
    <string name="pref_key_log_id">log_id</string>
    <string name="pref_key_cr_id">cr_id</string>
    <string name="pref_key_upload_status">upload_status</string>
    <string name="pref_key_upload_time">upload_time</string>
    <string name="pref_key_mobile_log">mobile_log</string>
    <string name="pref_key_modem_log">modem_log</string>
    <string name="pref_key_network_log">network_log</string>
    <string name="log_id">Log ID</string>
    <string name="cr_id">CR ID</string>
    <string name="upload_status">Upload status</string>
    <string name="upload_time">Upload time</string>
    <string name="pref_category_key_logs">pref_category_key_logs</string>
</resources>