<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:key="pref_logs" 
    android:id="@+id/pref_basic_info"
    >
	<PreferenceCategory 
	    android:title="@string/logs"
	    android:id="@+id/category_logs"	    
	    >
	     <CheckBoxPreference
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	          
			android:key="@string/chk_key_mobile_log"                    
			android:title="@string/mobile_log"  
			/>
	     <CheckBoxPreference	          
			android:key="@string/chk_key_modem_log"                    
			android:title="@string/modem_log"
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"  
			/>
	     <CheckBoxPreference	          
			android:key="@string/chk_key_net_log"                    
			android:title="@string/net_log"
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"  
			/>	     
	</PreferenceCategory>
	<PreferenceCategory 
	    android:title="@string/basic_info"
	    android:id="@+id/category_basic_info"
	    >
		<!-- -->
		<Preference android:key ="@string/pref_key_exception_db" />
		<Preference android:key = "@string/pref_key_process_name" /> 
		<Preference android:key = "@string/pref_key_exception_class" />
		<Preference android:key = "@string/pref_key_exception_level" />
		<Preference android:key = "@string/pref_key_exception_type" />
		<Preference android:key = "@string/pref_key_build_version" />
		<Preference android:key = "@string/pref_key_device_name" />
		<Preference android:key = "@string/pref_key_date_time" />		 
	</PreferenceCategory>	
</PreferenceScreen>