<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_settings" >

    <PreferenceCategory android:title="@string/general_settings_title" 
         android:key="general_settings_category" >
        <com.mediatek.mtklogger.utils.SelfdefinedSwitchPreference
            android:defaultValue="true"
            android:key="mobilelog_switch"
            android:title="@string/mobile_log_name" />
        <com.mediatek.mtklogger.utils.SelfdefinedSwitchPreference
            android:defaultValue="true"
            android:key="modemlog_switch"
            android:title="@string/modem_log_name" />
        <com.mediatek.mtklogger.utils.SelfdefinedSwitchPreference
            android:defaultValue="true"
            android:key="networklog_switch"
            android:title="@string/network_log_name" />
        <com.mediatek.mtklogger.utils.SelfdefinedSwitchPreference
            android:defaultValue="true"
            android:key="metlog_switch"
            android:title="@string/met_log_name" />
        <com.mediatek.mtklogger.utils.SelfdefinedSwitchPreference
            android:defaultValue="true"
            android:key="gpslog_switch"
            android:title="@string/gps_log_name" />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/advanced_settings_title"
        android:key="advanced_settings_category" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="taglog_enable"
            android:summary="@string/enable_tag_log_summary"
            android:title="@string/enable_tag_log_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="always_tag_modem_log_enable"
            android:title="@string/enable_always_tag_modem_log_title"
            android:summary="@string/enable_always_tag_modem_log_summary"
            android:dependency="taglog_enable"
            android:layout="?android:attr/preferenceLayoutChild" />
        <ListPreference
            android:dialogTitle="@string/log_storage_location_title"
            android:key="log_storage_location"
            android:title="@string/log_storage_location_title" />

         <CheckBoxPreference
            android:defaultValue="false"
            android:key="metlog_enable"
            android:summary="@string/enable_met_log_summary"
            android:title="@string/enable_met_log_title" />
         
         <Preference
            android:key="btlog_enable"
            android:summary="@string/enable_bt_log_summary"
            android:title="@string/enable_bt_log_title">
         </Preference>
         
         <Preference
            android:key="wifi_log_tool"
            android:summary="@string/open_wifi_log_tool_summary"
            android:title="@string/open_wifi_log_tool_title">
         </Preference>
        </PreferenceCategory>

</PreferenceScreen>