<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="networklog_preference_screen"
    android:title="@string/network_log_name" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="networklog_ping_flag"
        android:summary="@string/networklog_ping_summary"
        android:title="@string/networklog_ping_title" />
        
    <!-- Set each package's limit size -->
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="networklog_limit_package_enabler"
        android:summary="@string/networklog_limit_package_enabler_summary"
        android:title="@string/networklog_limit_package_enabler" />
    <EditTextPreference
        android:defaultValue="90"
        android:dependency="networklog_limit_package_enabler"
        android:key="networklog_limited_package_size"
        android:summary="@string/networklog_limit_package_size_summary"
        android:title="@string/networklog_limit_package_size" 
        android:layout="?android:attr/preferenceLayoutChild"/>
        
    <EditTextPreference
        android:defaultValue="600"
        android:key="networklog_logsize"
        android:summary="@string/limit_log_size_summary"
        android:title="@string/limit_log_size_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="networklog_autostart"
        android:summary="@string/start_automatically_network_summary"
        android:title="@string/start_automatically_title" />
	
</PreferenceScreen>